--- a/index.html
+++ b/index.html
@@ -7,11 +7,24 @@
 </head>
 <body>
 
-  <div class="window">
-    <div class="images">
-      <img src="./1.png" alt="图片" width="400" height="300">
-      <img src="./2.png" alt="图片" width="400" height="300">
-      <img src="./3.png" alt="图片" width="400" height="300">
+  <div class="container">
+    <div class="window">
+      <div id="slides" class="images">
+        <img src="./1.png" alt="图片" width="400" height="300">
+        <img src="./2.png" alt="图片" width="400" height="300">
+        <img src="./3.png" alt="图片" width="400" height="300">
+        <img src="./4.png" alt="图片" width="400" height="300">
+      </div>
+    </div>
+    <div id="controls" style="text-align:center;">
+      <button id="previous">上一张</button>
+      <button id="next">下一张</button>
+    </div>
+    <div id=buttonWrapper style="text-align:center;">
+      <button>1</button>
+      <button>2</button>
+      <button>3</button>
+      <button>4</button>
     </div>
   </div>
   
